--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <h1>YASH RAJ'S PORTFOLIO</h1>
     <h2>I'm a web developer</h2>
     <hr/>
-    <a href="../4.3 HTML Porfolio Project/public/movie-ranking.html"><h3>Movie Ranking Projects</h3></a>
-    <img src="../4.3 HTML Porfolio Project/assets/images/movie-ranking.png" height="200">
-    <a href="../4.3 HTML Porfolio Project/public/birthday-invite.html"><h3>Birthday Invite Project</h3></a>
-    <img src="../4.3 HTML Porfolio Project/assets/images/birthday-invite.png" height="200">
+    <a href="./public/movie-ranking.html"><h3>Movie Ranking Projects</h3></a>
+    <img src="./assets/images/movie-ranking.png" height="200">
+    <a href="./public/birthday-invite.html"><h3>Birthday Invite Project</h3></a>
+    <img src="./assets/images/birthday-invite.png" height="200">
     <hr/>
-    <a href="../4.3 HTML Porfolio Project/public/about.html">About me</a>
-    <a href="../4.3 HTML Porfolio Project/public/contact.html">Contact me</a>
+    <a href="./public/about.html">About me</a>
+    <a href="./public/contact.html">Contact me</a>
 </body>
 </html>
